Fix text overlapped under tablet view

--- a/src/sass/_about-me.scss
+++ b/src/sass/_about-me.scss
@@ -18,7 +18,7 @@ div.onlyMobileAndTabletShown, .onlyMobileAndTabletShown {
   display: none;
 }
 
-@media only screen and (max-width: 960px) {
+@media only screen and (max-width: 1000px) {
   div.onlyMobileAndTabletShown {
     display: flex;
     justify-content: center;
