--- a/src/sass/_digital_clock.scss
+++ b/src/sass/_digital_clock.scss
@@ -17,7 +17,7 @@ q.slogan {
   font-weight: 600;
 }
 
-@media only screen and (max-width: 960px) {
+@media only screen and (max-width: 1000px) {
   .digitalClock {
     display: flex;
     justify-content: center;
