--- a/src/sass/_portfolio.scss
+++ b/src/sass/_portfolio.scss
@@ -33,7 +33,7 @@
   }
 }
 
-@media only screen and (max-width: 960px) {
+@media only screen and (max-width: 1000px) {
   .informationWrapper {
     position: static;
     display: flex;
