--- a/src/sass/_profile.scss
+++ b/src/sass/_profile.scss
@@ -25,7 +25,7 @@ h5.email {
   }
 }
 
-@media only screen and (max-width: 960px) {
+@media only screen and (max-width: 1000px) {
   .profile {
     display: flex;
     flex-flow: column nowrap;
