--- a/src/sass/_selections.scss
+++ b/src/sass/_selections.scss
@@ -19,7 +19,7 @@
   }
 }
 
-@media only screen and (max-width: 960px) {
+@media only screen and (max-width: 1000px) {
   .selectionsWrapper {
     display: none;
   }
