--- a/src/sass/_tags.scss
+++ b/src/sass/_tags.scss
@@ -30,7 +30,7 @@ svg.eachTag {
   }
 }
 
-@media only screen and (max-width: 960px) {
+@media only screen and (max-width: 1000px) {
   .tags {
     display: flex;
     justify-content: flex-start;
